--- a/app/src/main/res/layout/activity_institute_data.xml
+++ b/app/src/main/res/layout/activity_institute_data.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/pale_blue_background"
-    tools:context=".dataObjects.InstituteDataActivity">
+    tools:context=".dataObjects.Institute_data_activity">
 
     <include android:id="@+id/include" layout="@layout/toolbar" />
 
