--- a/app/src/main/res/layout/activity_institute_main.xml
+++ b/app/src/main/res/layout/activity_institute_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +10,7 @@
 
     <include android:id="@+id/include" layout="@layout/toolbar" />
 
+
     <TextView
         android:id="@+id/welcome_institute"
         android:layout_width="244dp"
@@ -17,23 +19,25 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.169"
+        app:layout_constraintVertical_bias="0.167"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/name_institute"
         android:layout_width="300sp"
         android:layout_height="80sp"
+        android:layout_marginTop="120dp"
         android:text=""
         android:textSize="50sp"
-        app:layout_constraintBottom_toTopOf="@+id/watch_queue"
+        app:layout_constraintBottom_toTopOf="@+id/chooseTreatmentType"
         app:layout_constraintEnd_toEndOf="@+id/welcome_institute"
         app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="@+id/welcome_institute"
         app:layout_constraintTop_toBottomOf="@+id/include"
-        app:layout_constraintVertical_bias="0.668"
+        app:layout_constraintVertical_bias="0.005"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -49,11 +53,12 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/update_queue"
+        android:id="@+id/add_queue"
         android:layout_width="197dp"
         android:layout_height="90dp"
         android:layout_marginTop="48dp"
-        android:text="עדכון תורים"
+        android:layout_marginBottom="32dp"
+        android:text="הוספת תורים"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/instData"
         app:layout_constraintEnd_toEndOf="parent"
