--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -7,53 +7,42 @@
     android:background="@drawable/pale_blue_background"
     tools:context=".entryActivities.Forget_Password_Activity">
 
-    <TextView
-        android:id="@+id/forget_password_orders_to_new_password"
-        android:layout_width="163dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="30dp"
-        android:text="מלא את הפרטים הבאים בבקשה :"
-        android:textColor="#150101"
-        android:textSize="15dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forget_password_main_text" />
-
     <include
         android:id="@+id/include2"
         layout="@layout/toolbar" />
 
     <TextView
         android:id="@+id/forget_password_main_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="394dp"
+        android:layout_height="140dp"
         android:layout_marginTop="40dp"
         android:text="שיחזור סיסמא"
+        android:textAlignment="center"
         android:textSize="36dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include2" />
 
     <TextView
         android:id="@+id/forget_password_orders_text"
-        android:layout_width="170dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
         android:text="מלא את הפרטים הבאים בבקשה :"
+        android:textAlignment="center"
         android:textColor="#150101"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forget_password_main_text" />
 
     <EditText
         android:id="@+id/forget_password_user_email"
-        android:layout_width="170dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="50dp"
         android:background="#DAC4DD"
         android:ems="10"
         android:hint="אי-מייל"
@@ -64,9 +53,9 @@
 
     <EditText
         android:id="@+id/forget_password_userName_ID"
-        android:layout_width="170dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="50dp"
         android:background="#DAC4DD"
         android:ems="10"
         android:hint="שם משתמש"
@@ -80,67 +69,22 @@
         android:id="@+id/foget_passwoed_send_details_to_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:text="שלח פרטים"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forget_password_user_email" />
 
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="168dp"
-        android:layout_height="132dp"
-        android:layout_marginTop="109dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/foget_passwoed_send_details_to_check"
-        app:layout_constraintVertical_bias="0.018" />
-
-    <EditText
-        android:id="@+id/forget_password_new_password_1"
-        android:layout_width="170dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="30dp"
-        android:background="#DAC4DD"
-        android:ems="10"
-        android:hint="הזינו סיסמא חדשה"
-        android:inputType="textPassword"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/forget_password_orders_to_new_password"
-        app:layout_constraintStart_toStartOf="@+id/forget_password_orders_to_new_password"
-        app:layout_constraintTop_toTopOf="@+id/forget_password_orders_to_new_password" />
-
-    <EditText
-        android:id="@+id/forget_password_new_password_2"
-        android:layout_width="170dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="30dp"
-        android:background="#DAC4DD"
-        android:ems="10"
-        android:hint="אימות סיסמא"
-        android:inputType="textPassword"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/forget_password_new_password_1"
-        app:layout_constraintStart_toStartOf="@+id/forget_password_new_password_1"
-        app:layout_constraintTop_toTopOf="@+id/forget_password_new_password_1" />
-
     <Button
-        android:id="@+id/foget_passwoed_send_new_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="65dp"
+        android:id="@+id/forget_password_send_new_password"
+        android:layout_width="153dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="29dp"
         android:text="אשר סיסמא חדשה"
-        android:textSize="20dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forget_password_new_password_2" />
+        app:layout_constraintEnd_toEndOf="@+id/forget_password_user_email"
+        app:layout_constraintStart_toStartOf="@+id/forget_password_user_email"
+        app:layout_constraintTop_toBottomOf="@+id/forget_password_user_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
