--- a/app/src/main/res/layout/activity_queue_search.xml
+++ b/app/src/main/res/layout/activity_queue_search.xml
@@ -11,7 +11,7 @@
         android:layout_width="131dp"
         android:layout_height="25dp"
         android:layout_marginEnd="72dp"
-        android:entries="@array/treat_type__array"
+        android:entries="@array/treatment_type"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/treat_type"
         app:layout_constraintHorizontal_bias="1.0"
