--- a/app/src/main/res/layout/activity_watching_queue.xml
+++ b/app/src/main/res/layout/activity_watching_queue.xml
@@ -18,14 +18,30 @@
         android:textColor="#FFFF"
         android:layout_marginLeft="120dp"
         android:layout_marginTop="40dp"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/watching_treatment_type"
+        android:layout_width="109dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="290dp"
+        android:text="סוג טיפול"
+        android:textSize="20sp" />
+
+    <Spinner
+        android:id="@+id/watching_chooseTreatmentType"
+        android:layout_width="209dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="185dp" />
 
     <LinearLayout
+
         android:background="@drawable/bg_calen"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
-        android:layout_marginTop="60dp">
+        android:layout_marginTop="40dp">
 
         <CalendarView
             android:id="@+id/calendar"
@@ -35,6 +51,8 @@
         </CalendarView>
 
     </LinearLayout>
+
+
 
 
 </LinearLayout>
