--- a/app/src/main/res/layout/activity_private__area.xml
+++ b/app/src/main/res/layout/activity_private__area.xml
@@ -4,6 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Private_Area">
+    android:background="@drawable/pale_blue_background"
+    tools:context=".clientActivities.Private_Area">
+
+    <Button
+        android:id="@+id/show_queues"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="הצג תורים שנקבעו"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.143" />
+
+    <Button
+        android:id="@+id/edit_det"
+        android:layout_width="188dp"
+        android:layout_height="43dp"
+        android:text="ערוך פרטיים אישיים"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/show_queues"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="@+id/show_queues"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.421" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
