--- a/app/src/main/res/layout/activity_queue_search.xml
+++ b/app/src/main/res/layout/activity_queue_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pale_blue_background"
     tools:context=".clientActivities.queue_search">
 
     <Spinner
