--- a/app/src/main/res/layout/activity_queue_src_res.xml
+++ b/app/src/main/res/layout/activity_queue_src_res.xml
@@ -8,6 +8,17 @@
     tools:context=".clientActivities.queue_src_res">
 
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="96dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.02"
+        app:srcCompat="@mipmap/dimot_bekalot_logo" />
 
     <TextView
         android:id="@+id/res_num1"
