--- a/app/src/main/res/layout/activity_update_queue.xml
+++ b/app/src/main/res/layout/activity_update_queue.xml
@@ -36,7 +36,7 @@
         tools:ignore="MissingConstraints" />
 
     <Spinner
-        android:id="@+id/chooseTreatmentType"
+        android:id="@+id/update_chooseTreatmentType"
         android:layout_width="209dp"
         android:layout_height="40dp"
 
