--- a/app/src/main/res/layout/activity_update_queue.xml
+++ b/app/src/main/res/layout/activity_update_queue.xml
@@ -35,11 +35,10 @@
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:ignore="MissingConstraints" />
 
-    <Spinner
+    <TextView
         android:id="@+id/update_chooseTreatmentType"
         android:layout_width="209dp"
         android:layout_height="40dp"
-
         app:layout_constraintBottom_toTopOf="@+id/user_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.91"
@@ -67,8 +66,6 @@
         android:layout_height="46dp"
         android:background="#DAC4DD"
         android:ems="10"
-        android:hint="333333333"
-        android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/date"
         app:layout_constraintEnd_toEndOf="@+id/user_id"
         app:layout_constraintHorizontal_bias="1.0"
