--- a/app/src/main/res/layout/activity_list_queues_institute.xml
+++ b/app/src/main/res/layout/activity_list_queues_institute.xml
@@ -6,20 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pale_blue_background"
-    tools:context=".ListQueuesInstituteActivity">
+    tools:context=".InstituteActivity.ListQueuesInstituteActivity">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="154dp"
-        android:layout_height="61dp"
-        android:text="רשימת תורים"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
+        android:text="לחץ על תור כדי לעדכן אותו"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.083" />
+        app:layout_constraintVertical_bias="0.092" />
 
     <ListView
         android:id="@+id/lvQueues"
