--- a/app/src/main/res/layout/popup_password_change_institute.xml
+++ b/app/src/main/res/layout/popup_password_change_institute.xml
@@ -12,26 +12,34 @@
     android:background="@color/white">
 
     <TextView
-        android:text="אנא כתבו כאן את הטקסט אשר תרצו לעדכן;"
-        android:layout_width="match_parent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_height="match_parent" />
-
-    <EditText
-        android:id="@+id/input_data_to_change"
+        android:text="אנא כתבו כאן את הקוד אשר תרצו לעדכן;"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:hint="אנא כיתבו כאן"
+        android:textSize="20dp"
+        android:textStyle="bold"
+         />
+
+    <EditText
+        android:id="@+id/password1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:hint="הקוד החדש"
         android:background="@drawable/bg_calen"
         android:textSize="30dp"/>
 
-        <Button
-            android:id="@+id/yes_update"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:text="עדכן"
-            android:textSize="25dp"/>
+    <EditText
+        android:id="@+id/password2"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:hint="אנא כיתבו אותו שוב"
+        android:background="@drawable/bg_calen"
+        android:textSize="20dp"/>
 
+    <Button
+        android:id="@+id/yes_update_password"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="עדכן"
+        android:textSize="25dp"/>
 
 </LinearLayout>
