--- a/app/src/main/res/layout/popup_address_change_institute.xml
+++ b/app/src/main/res/layout/popup_address_change_institute.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginLeft="70dp"
@@ -13,54 +13,40 @@
 
     <TextView
         android:text="אנא כתבו כאן את הטקסט אשר תרצו לעדכן;"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_height="match_parent" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/data_city"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:hint="שם העיר"
         android:background="@drawable/bg_calen"
         android:textSize="30dp"/>
 
     <EditText
         android:id="@+id/data_street"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:hint="שם הרחוב"
         android:background="@drawable/bg_calen"
         android:textSize="30dp"/>
 
     <EditText
         android:id="@+id/data_number_house"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:hint="מספר הבית"
         android:background="@drawable/bg_calen"
         android:textSize="30dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/yes_update_address"
-            android:layout_width="130dp"
-            android:layout_height="60dp"
-            android:text="עדכן"
-            android:textSize="25dp"/>
-
-        <Button
-            android:id="@+id/no_cancel_address"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="בטל"
-            android:textSize="25dp" />
-
-    </LinearLayout>
-
+    <Button
+        android:id="@+id/yes_update_address"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="עדכן"
+        android:textSize="25dp"/>
 
 </LinearLayout>
