--- a/app/src/main/res/layout/activity_institute_main.xml
+++ b/app/src/main/res/layout/activity_institute_main.xml
@@ -27,10 +27,9 @@
 
     <TextView
         android:id="@+id/name_institute"
-        android:layout_width="300sp"
-        android:layout_height="80sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
-        android:text=""
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/chooseTreatmentType"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,10 +47,10 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintHorizontal_bias="0.629"
         app:layout_constraintStart_toEndOf="@+id/add_queue"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"
+        app:layout_constraintVertical_bias="0.879"
         tools:ignore="MissingConstraints" />
 
     <Button
