--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60sp"
     android:background="@color/purple_500">
@@ -12,11 +13,22 @@
             android:id="@+id/Dimot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="200dp"
+            android:layout_marginStart="152dp"
+            android:layout_marginEnd="49dp"
+            android:layout_toEndOf="@+id/logOutButton"
             android:text="דימות בקלות"
             android:textColor="@android:color/white"
             android:textSize="30dp" />
+
+        <ImageButton
+            android:id="@+id/logOutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            app:srcCompat="@android:drawable/ic_lock_power_off" />
 
     </RelativeLayout>
 </RelativeLayout>
