--- a/app/src/main/res/layout/activity_main_client_view.xml
+++ b/app/src/main/res/layout/activity_main_client_view.xml
@@ -61,13 +61,12 @@
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="18sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/Private_Area"
+        app:layout_constraintStart_toStartOf="@+id/Private_Area"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908"
-        tools:visibility="invisible" />
+        app:layout_constraintVertical_bias="0.889" />
 
     <Button
         android:id="@+id/Private_Area"
@@ -80,10 +79,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/queue_order"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/queue_order"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.653" />
+        app:layout_constraintVertical_bias="0.648" />
 
     <ImageView
         android:id="@+id/imageView4"
