--- a/app/src/main/res/layout/popup_address_change_institute.xml
+++ b/app/src/main/res/layout/popup_address_change_institute.xml
@@ -14,13 +14,18 @@
     <TextView
         android:text="אנא כתבו כאן את הטקסט אשר תרצו לעדכן;"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textStyle="bold" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20dp"/>
+
 
     <EditText
         android:id="@+id/data_city"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="שם העיר"
         android:background="@drawable/bg_calen"
@@ -28,7 +33,7 @@
 
     <EditText
         android:id="@+id/data_street"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="שם הרחוב"
         android:background="@drawable/bg_calen"
@@ -36,7 +41,7 @@
 
     <EditText
         android:id="@+id/data_number_house"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="מספר הבית"
         android:background="@drawable/bg_calen"
